
Package: PSCBS
==============

Version: 0.11.5 [2011-07-10]
o ROBUSTNESS: Fixed partial argument matchings in arrowsC1C2() and
  arrowsDeltaC1C2() for PairedPSCBS.


Version: 0.11.4 [2011-07-07]
o GENERALIZATION: Now the internal estimator function that
  estimateDeltaLOH() uses returns -Inf if all segments are called AB,
  instead of throwing an exception.  This will in turn make callLOH()
  call all segments to be non-LOH.
o DOCUMENTATION: Removed obsolete references to the R-forge repository.
o BUG FIX: Consecutive calls to callAB(..., force=TRUE) would append
  additional 'abCall' columns to the segmentation table instead of
  replacing existing calls.


Version: 0.11.3 [2011-07-06]
o ROBUSTNESS: Added a sanity check to estimateDeltaLOHByMinC1AtNonAB() for
  PairedPSCBS object. The test asserts that there exist segments that are
  not in allelic balance, which are needed in order to estimate DeltaLOH.
o DOCUMENTATION: The description of argument 'chromosome' for 
  segmentByPairedPSCBS() did not describe how to segment multiple
  chromosomes in one call.


Version: 0.11.2 [2011-07-05]
o BUG FIX: Output fields 'tcnNbrOfSNPs'and 'tcnNbrOfHets' were 
  mistakenly labelled as 'tcnNbrOr...'.  Thanks Christine Ho at
  UC Berkeley for reporting on this.


Version: 0.11.1 [2011-06-28]
o DOCUMENTATION: Clarified that argument 'CT' should be tumor copy
  number ratios relative to the normal.
o DOCUMENTATION: Added Rd help for as.data.frame() of PairedPSCBS.


Version: 0.11.0 [2011-06-14]
o Renamed all column names of returned data frames such that
  they follow the camelCase naming conventions in addition
  to be somewhat shorter too.
o GENERALIZATION: Added argument 'columnNamesFlavor' to segmentByCBS().


Version: 0.10.2 [2011-06-07]
o CLEANUP: Cleaned up the example():s.
o Added more biocViews categories to DESCRIPTION


Version: 0.10.1 [2011-05-31]
o GENERALIZATION: The package can now be *installed* without the